@@ -12,19 +12,15 @@ DIST jffi-1.0.11.tar.gz 1899655 SHA256 b66781a07e095dbaf9d568b77762e06215da4458d
 DIST jffi-1.2.5.tar.gz 1798081 SHA256 2101c48855558902f2e21baacd0b2c8b7098feb3ca1487a195c2bc3d9116ebd4 SHA512 2613a1874899e1a734ad54d68f7d969fe3bc12bd1ae1aaf5a63a17d63ac6ac6b9812740b7c7a771e66ba0e4ff02105c6a2427771d4571be40ae869f3d6f077e3 WHIRLPOOL 174303fc9f10cf295e009ef2320f9b13295f5e96187ab2ae4599de891b27e1279645ea47409eb8aec9a8b247a5568cddd6f8566950b64be37e399cb0eda0219f
 DIST jffi-1.2.6.tar.gz 1850410 SHA256 b568d832828bf0cb980c545e8fd16147034048ca2d3ffc62cae4f844c8cc6cec SHA512 df178691e6894599f2a45146950cca7e4c81e92c38fc751c40b39e660970c19d0dce41c9192053dddf07f42317d28033f59b7140c904784c477526e7471b6938 WHIRLPOOL adb57b9ac981177ae7d697aae41bbaaff3a38dab4c4364258b13272023076dacdd93a751eb24a339ae17a4162d4511685a4aa67afd5d8fab2f852e0403ee73f1
 EBUILD jffi-1.0.0.ebuild 2274 SHA256 a5fe1144dacf4f666105ef56cec8a8bf7b246a68dbde639ec4a0c9c867a2d4b1 SHA512 35894dc27f8b0d0f672d1d39548af68057f79e252663cf2c9ec8802e7dabb6d721afd3e1d030b37f7c7c37e395c39cbf5cda2a5b4b97f95d17fa3aa9b4d642cc WHIRLPOOL 986db534860b62f5dce5a12667410dfeb7c120a0a3f9e4fc5c57dca37d694204a4ac2b4b3d2b76bc7a961d15a88c7868c2290eab253a46f0f1b64a32d48191b8
-EBUILD jffi-1.0.11.ebuild 2493 SHA256 affcd6d55af34b30b83074a675ccea2cc571df0eaf1b837e6c5e484f80acc021 SHA512 2a3e8ceeeb6dfd7bafe7bc1d53a12ec35b204cc10bb833412076b219fd506275f5e5d8cba8608de2cf80730d6bef1438f184a241dbda50290066420f7646240a WHIRLPOOL 0e5000088b97a8e6e5d1a42a819f80219f6837170a9534115cfe0203cf6706eb5a1d37fcf6fd2e7cab04904452edafda6c4a9254cf07e7de8b4ee917257b5744
+EBUILD jffi-1.0.11.ebuild 2562 SHA256 e925f71ef49b9fb710f5f6ab0493a0099c57fc218aa939addf06868f51032092 SHA512 a99c55469211698e24257216249550d6f3d83d37a3a61c6887f3bc0e87ec1b5d88badb75af1eeb7955ab58da5f58621ea7e460b0b6355f4473e05c643e5ce0ab WHIRLPOOL 43eea302b639890b69014f1c3e97866a5afa5a80f84c5db0c15f872276846304c27ed966743426ba783f030060f0c85101148bb4e2275525a69ca10033fbf6cb
 EBUILD jffi-1.2.5.ebuild 2358 SHA256 89636672db08de6b69c64d1da78cad1e05679323d812900be1325202e9540707 SHA512 6df150b5bb15f94f937676b93a720c407a07dcaa646a6f72fd9bb706b61729da2332deec464f7cff0ef99c6d5716ca26dfc8ce4e821f9733db37e6387ab12a98 WHIRLPOOL 6c82cdc180b1cf9fce413facb9b4bdfcbc649f25fb5ae573b840d4deed72d0f3c66f5d459eedb1afb5b3dbf8cd873d8e6fc680c4eb944989605ec23e3914f737
 EBUILD jffi-1.2.6.ebuild 2358 SHA256 d7b4e29598f7e71a1235279c6f04aadaa41167ebde25fb520980c2b1a5f23084 SHA512 5b30160dace64ab895426c397223f7f9208f0600d20cac3bac5684400a244941437880a51d6637029a7e8f95b0c430c6ff9ce6156323baf63a7b55bbb667cdff WHIRLPOOL e397fcb8fb9f56334c4ee14907e56a0f6b2935e167b627f88255b88a7b1c5fc7f2ce2ff1d95fdf527117dc1d29e49009bef3711596c588aa360b0b6455675064
-MISC ChangeLog 4707 SHA256 b714752443bb721d95752176ea05570fb52ec0c7fb013a7fb115972724bb1360 SHA512 ad7378924c1cb6ab91c6831af4da553b7d7dc1dd3c6e1883589a539595ab65fd8892b6e81bd2568f491aedc7e122f778fbadb213c4cc487a48da6694581e35a9 WHIRLPOOL cfe9422e690e99ca12bfffaf3abcb0fc089038f21e0d514d89b4f469da88752ed59db270d24a46200fd65152173cfdd6cf61ec5eeb789583e33318c890d98a56
+MISC ChangeLog 4850 SHA256 f8562d768a502c37028d757cc2f2b863e9deec21ec538fb2a0ec57cee6c55f09 SHA512 78521b10fec7bb1ebc9fa6d9d4cdc8152e289d401abfc663a8c3f6d2dc66dd5dc1283127e65268dd60137be9c392e98f0668139344fdeeefcbc7a7b5fce49738 WHIRLPOOL dddb204cfa756488d571b65c5c36f2cf46d63ccf3cbad977bb0a20b835afce603b1edb85beeb83085abbf494d7da52a92aaed00055057af5f310d31af3a74375
 MISC metadata.xml 159 SHA256 1c070a909e96d9d193f84ad9304d196febbe33b60a724cc4b0d20634bb82255b SHA512 269cf19c37f2d136b926f546ec83ffdbc1374b2b6e26f8a31f21854143380386c31bfc7b2a0b9c47fb1f7c02607ddbdd43e517cb5c3270515e465c4dd7788843 WHIRLPOOL afb402fec04cddb3184b69eb8a8d36b404edd2870fd06c8f5e99be39c341ea6fa7542e0b680fac05529522ed33838e8279381d7a6de9dbc58fe55841229d8a51
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRE6oUAAoJELjwI6Q8XPdaBrMIAJFP9ufDo1OVnSI9fyB4qxV8
-pATEmjwd5LejBXKyXi9NdfHlMjbbmxpb6Eul+5nfPu5FqRu5+XFLWR6/KPPaH79U
-vL3XHY7iKPYlRNvYONJrYKSkgHeeM3YtiUw+UDnFYzzEwZNmWYRaMN9KJ6zJGytF
-5IFiavd3RVzNn01MwMs66VnyXznwuJSp86+kLZ6ONcoJbL1p5IJMELIX0LwBLy+l
-xq3qnehJz0nUH7DrOwMRi6f3p6sdfSw1QPeG+BrAPJK8Wv54vFXJLwJmle6zUhwZ
-bBv7rNnxy86ak9jmpncmmklj3rUMtVwgGeENcSbsZprMz64hVZrzXdtMTGUERs4=
-=0ZlO
+iEYEAREIAAYFAlIiBV4ACgkQCaWpQKGI+9TyLACfaXGM2ZoeOyi8l4MN3BLuJPvT
+YWEAni333CSZYXOAEJpZ6Mao+5YWDfA+
+=gzu5
 -----END PGP SIGNATURE-----
