@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jffi
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jffi/ChangeLog,v 1.26 2013/02/07 13:15:36 sera Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jffi/ChangeLog,v 1.27 2013/08/31 15:01:48 pacho Exp $
+
+  31 Aug 2013; Pacho Ramos <pacho@gentoo.org> jffi-1.0.11.ebuild:
+  Drop -Werror usage in tests and fix tests building with gcc-4.7 (#438130)
 
 *jffi-1.2.6 (07 Feb 2013)
 
@@ -134,4 +137,3 @@
   22 May 2009; Vlastimil Babka <caster@gentoo.org> +jffi-0.3-r2.ebuild,
   +metadata.xml:
   New package, jruby dependency. Ebuild provided by chewi in java-overlay.
-
